--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -6,10 +6,11 @@
   border-radius: 12px;
   text-align: center;
   color: white;
+  width:"300px";
 }
 
 .movie h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #f7e702;
 }
 
@@ -17,4 +18,34 @@
   color: #eccf77;
   margin: 0;
   font-size: 1rem;
+}
+
+.card {
+  width: 150px;
+  height: 300px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.card-content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 10px;
 }
