--- a/src/components/MoviesList.module.css
+++ b/src/components/MoviesList.module.css
@@ -1,5 +1,10 @@
 .movies-list {
-  list-style: none;
+  display: flex;
   margin: 0;
   padding: 0;
+  overflow-x: scroll;
+}
+
+.movies-list::-webkit-scrollbar {
+  display: none;
 }
